--- a/recipes/ethans_pickles.html
+++ b/recipes/ethans_pickles.html
@@ -1,11 +1,31 @@
-<h1>Ethan's Pickles</h1>
+<h1>Ethan's Full Sour Pickles</h1>
 
-Well you want to make sure you are getting the right type of cucumbers. The ones I get at the farmer’s market are called pickling cucumbers, but I think they are Bush Cucumbers.</br></br>
+Makes 30 full sour pickle halves. Fits in 1 liter(?) jar.</br></br>
 
-After you have them, wash thoroughly, cut off the tips, and quarter. When they are quartered, salt heavily and let sit. This will draw the water out of the cucumber. Wipe down with a paper towel after letting them sit for 15 min.</br></br>
+<b>Note:</b> Use sea salt or pickling salt (sans iodine/anti-caking agent)</br>
+<b>Note:</b> Use filtered/bottled water</br>
+</br>
 
-In the meantime, start your brine on the stove. I use 3 cups of water to 2 cups of white wine vinegar. That will make enough for 2 mason jars. Put over medium heat with a little over a tablespoon of salt and a little under a table spoon of sugar. Make sure your salt is either sea salt or pickling salt. Once its boiling and combined, turn stove off and let cool.</br></br>
+<b>For the Brine</b></br>
+3 cups water</br>
+2 cups white vinegar</br>
+1 tbsp salt</br>
+1 tsp sugar</br>
+</br>
 
-In jars, put a healthy amount of fresh dill, multiple cloves of garlic (both chopped and whole are good), I like adding Habanero peppers, 1 with seeds and 1 without, chopped. You can add peppercorn or other flavors if you want.</br></br>
+<b>For the Pickles</b></br>
+15(?) small Kirby cucumbers</br>
+Dill</br>
+Garlic</br>
+Peppercorn</br>
+Mustard seeds</br>
+Chili peppers (optional)</br>
+</br>
 
-Add cucumbers to jar and pour brine in jars once room temperature. Keep closed for at least 24 hours. 48 hours is better. Then they are good to eat
+<b>Directions</b></br>
+1. Cut off cucumber tips, then halve.</br>
+2. Salt heavily ("It's impossible to over salt!"), let sit 10-15 minutes, then wipe off salt and pat dry.</br>
+3. Combine brine ingredients in pot, bring to simmer, then let fully cool to room temp.</br>
+4. Place flavorings at bottom of jar, pack cucumber halves on top.</br>
+5. Pour in brine, making sure cucumber halves don't bob above the liquid level.</br>
+6. Seal and let sit in fridge for 1 week.
