add ethan picture

--- a/recipes/ethans_pickles.html
+++ b/recipes/ethans_pickles.html
@@ -29,3 +29,6 @@ Chili peppers (optional)</br>
 4. Place flavorings at bottom of jar, pack cucumber halves on top.</br>
 5. Pour in brine, making sure cucumber halves don't bob above the liquid level.</br>
 6. Seal and let sit in fridge for 1 week.
+
+</br></br>
+<img src="ethans_pickles.jpg", width="500">
