--- a/recipes/beef_seaweed_soup.html
+++ b/recipes/beef_seaweed_soup.html
@@ -14,5 +14,5 @@
 2. Heat sesame oil in Dutch oven over medium-low heat. Add garlic and cook for 1 minute.</br>
 3. Add beef and soy sauce. Stir to mix, spread out, and cook until bottom of beef is brown.</br>
 4. Drain seaweed and squeeze out excess water. Add to Dutch oven with pinch of salt and a few grinds of black pepper. Increase heat to medium and cook until beef is brown on both sides.</br>
-5. Add 1.75L/7.5 cups water and bring to boil. Reduce to simmer for 5-10 minutes.</br>
+5. Add 1.75L/7.5 cups water, cover, and bring to boil. Reduce to simmer for 5-10 minutes.</br>
 6. Season with salt to taste. Serve with rice, kimchi, and Korean pickled pepper.
