--- a/recipes/ethans_pickles.html
+++ b/recipes/ethans_pickles.html
@@ -23,11 +23,11 @@ Chili peppers (optional)</br>
 </br>
 
 <b>Directions</b></br>
-1. Cut off cucumber tips, then halve.</br>
-2. Salt heavily ("It's impossible to over salt!"), let sit 10-15 minutes, then wipe off salt and pat dry.</br>
-3. Combine brine ingredients in pot, bring to simmer, then let fully cool to room temp.</br>
+1. Combine brine ingredients in pot, bring to simmer, then let fully cool to room temp.</br>
+2. Meanwhile, cut off cucumber tips, then halve.</br>
+3. Salt heavily ("It's impossible to over salt!"), let sit 10-15 minutes, then wipe off salt and pat dry.</br>
 4. Place flavorings at bottom of jar, pack cucumber halves on top.</br>
-5. Pour in brine, making sure cucumber halves don't bob above the liquid level.</br>
+5. Pour in cooled brine, making sure cucumber halves don't bob above the liquid level.</br>
 6. Seal and let sit in fridge for 1 week.
 
 </br></br>
