--- a/recipes/radish_soup.html
+++ b/recipes/radish_soup.html
@@ -4,7 +4,7 @@
 2-3 dried anchovy</br>
 2-3 large pieces kombu</br>
 2 tbsp grated garlic, divided</br>
-2 tbsp soup soy sauce, divided</br>
+2 tbsp soup soy sauce (국간장), divided</br>
 1 tbsp Korean cooking wine (맛술 미림)</br>
 200g beef, cut bite-size</br>
 1 tsp sesame oil</br>
