--- a/recipes/charoset.html
+++ b/recipes/charoset.html
@@ -1,16 +1,16 @@
-Pleskow Charoset
+<h1>Pleskow Charoset</h1>
 
-1/2 cup pecan or walnut
-3-4 tbsp sugar, decreased to taste
-2 medium apples (fuji or honey crisp), peeled, cored
-2-3 tbsp lemon juice
-1 tsp cinnamon
-1/2 tsp ground ginger
-1/2 cup almonds, chopped
-12 pitted dates, chopped
-1/4 cup pine nuts (optional)
-
-1. Combine pecans/walnuts and lesser amount of suger. Grind in processor until fine.
-2. Grate half the apples; chop the other half. Mix in lemon juice.
-3. Stir in rest of the ingredients.
-4. Add more sugar, lemon juice, salt to taste.
+1/2 cup pecan or walnut</br></br>
+3-4 tbsp sugar, decreased to taste</br>
+2 medium apples (fuji or honey crisp), peeled, cored</br>
+2-3 tbsp lemon juice</br>
+1 tsp cinnamon</br>
+1/2 tsp ground ginger</br>
+1/2 cup almonds, chopped</br>
+12 pitted dates, chopped</br>
+1/4 cup pine nuts (optional)</br>
+</br>
+1. Combine pecans/walnuts and lesser amount of suger. Grind in processor until fine.</br>
+2. Grate half the apples; chop the other half. Mix in lemon juice.</br>
+3. Stir in rest of the ingredients.</br>
+4. Add more sugar, lemon juice, salt to taste.</br>
