--- a/recipes/charoset.html
+++ b/recipes/charoset.html
@@ -1,6 +1,7 @@
 <h1>Pleskow Charoset</h1>
 
-1/2 cup pecan or walnut</br></br>
+<h3>Ingredients</h3>
+1/2 cup pecan or walnut</br>
 3-4 tbsp sugar, decreased to taste</br>
 2 medium apples (fuji or honey crisp), peeled, cored</br>
 2-3 tbsp lemon juice</br>
@@ -10,7 +11,11 @@
 12 pitted dates, chopped</br>
 1/4 cup pine nuts (optional)</br>
 </br>
+<h3>Instructions</h3>
 1. Combine pecans/walnuts and lesser amount of suger. Grind in processor until fine.</br>
 2. Grate half the apples; chop the other half. Mix in lemon juice.</br>
 3. Stir in rest of the ingredients.</br>
 4. Add more sugar, lemon juice, salt to taste.</br>
+</br>
+</br>
+Store in fridge in airtight container. Best fresh, but lasts ok for a week+.
