--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -2,24 +2,24 @@
 
 Yields 5-6 17oz bottles</br>
 
-<h2>Ingredients</h2>
+<h2>Ingredients</h2></br>
 <b>Tea</b>
 1 gallon water</br>
 1 cup sugar</br>
-8 black tea bags</br>
+8 black tea bags</br></br>
 
 <b>Flavorings</b></br>
-Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br></br>
+Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
 
-<h2>Directions</h2></br>
+</br><h2>Directions</h2></br>
 
 <b>Prepare new tea</b></br>
 Make new tea with 1 gallon water, 8 black tea bags, 1 cup sugar. Exact method doesn’t really matter. Let cool. </br>
 
 
-<b>Bottle fermented tea</br>
+</br><b>Bottle fermented tea</b></br>
 Put flavoring into 5-6 tall skinny 17 oz fermentation bottles 
-(vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; less surface area exposed to air is better). </br>
+(vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; less surface area exposed to air is better). Can soap the bottles but don't worry too much about deep scrubs every time in between batches.</br>
 
 Take mother out of previous batch in gallon jug and set aside. Reserve 2 cups of the fermented tea. Decant the rest of the fermented tea into the prepared bottles. </br>
 
@@ -27,7 +27,7 @@ Set capped kombucha bottles aside at room temp for a day or two, depending on yo
 
 Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. Move to fridge to halt carbonation. </br>
 
-<b>Bottle new tea</b></br>
+</br><b>Bottle new tea</b></br>
 
 Put reserved 2 cups fermented tea back in gallon jug, no need to soap, along with cooled new tea and mother. The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br>
 
