--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -11,31 +11,36 @@ Yields 5-6 17oz bottles</br>
 <b>Flavorings</b></br>
 Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
 
+<b>Equipment</b></br>
+1 gallon glass jug</br>
+5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
+  less surface area exposed to air is better)</br>
+pot for boiling tea </br>
+funnel </br>
+bottle brush for occassional deep cleaning </br>
+
 </br><h2>Directions</h2></br>
 
 <b>Prepare new tea</b></br>
-Make new tea with 1 gallon water, 8 black tea bags, 1 cup sugar. Exact method doesn’t really matter. Let cool. </br>
+1. Boil 1 gallon water to make tea with 8 black tea bags and 1 cup sugar. Exact method doesn’t really matter. Let cool. </br>
 
 
 </br><b>Bottle fermented tea</b></br>
-Put flavoring into 5-6 tall skinny 17 oz fermentation bottles 
-(vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; less surface area exposed to air is better). Can soap the bottles but don't worry too much about deep scrubs every time in between batches.</br>
+2. Put flavoring into 5-6 tall skinny 17 oz fermentation bottles. Can soap the bottles but don't worry too much about deep scrubs every time in between batches.</br></br>
 
-Take mother out of previous batch in gallon jug and set aside. Reserve 2 cups of the fermented tea. Decant the rest of the fermented tea into the prepared bottles. </br>
+3. Take mother out of previous batch in gallon jug and set aside. Reserve 2 cups of the fermented tea. Decant the rest of the fermented tea into the prepared bottles. </br></br>
 
-Set capped kombucha bottles aside at room temp for a day or two, depending on your preference of carbonation (and accounting for summer/winter room temp). Consider storing on a baking sheet in case carbonation forces leakage. </br>
-
-Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. Move to fridge to halt carbonation. </br>
+4. Set capped kombucha bottles aside at room temp for a day or two, depending on your preference of carbonation (and accounting for summer/winter room temp). 
+    Consider storing on a baking sheet in case carbonation forces leakage. Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. Move to fridge to halt carbonation. </br></br>
 
 </br><b>Bottle new tea</b></br>
 
-Put reserved 2 cups fermented tea back in gallon jug, no need to soap, along with cooled new tea and mother. The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br>
+5. Put reserved 2 cups fermented tea back in gallon jug, no need to soap, along with cooled new tea and mother. 
+      The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
 
-Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in. </br>
-
-Set gallon jug aside at room temp for a week or so, depending on your preference of fermentation (and accounting for summer/winter room temp). The longer it ferments with the mother the less sweet and  the more vinegary it will become. </br>
-
-This is now the gallon jug you’ll use back at the beginning of the recipe. 
+6. Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in and set gallon jug aside at room temp for a week or so, 
+      depending on your preference of fermentation (and accounting for summer/winter room temp). 
+      The longer it ferments with the mother the less sweet and  the more vinegary it will become. This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
 
 
 
