--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -6,16 +6,16 @@ Yields 5-6 17oz bottles</br>
 <b>Tea</b>
 1 gallon water</br>
 1 cup sugar</br>
-8 black tea bags</br></br>
+8 black tea bags</br>
 
-<b>Flavorings</b></br>
+</br><b>Flavorings</b></br>
 Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
 
-<b>Equipment</b></br>
+</br><b>Equipment</b></br>
 1 gallon glass jug</br>
 5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
   less surface area exposed to air is better)</br>
-pot for boiling tea </br>
+large pot for boiling tea </br>
 funnel </br>
 bottle brush for occassional deep cleaning </br>
 
@@ -31,16 +31,19 @@ bottle brush for occassional deep cleaning </br>
 3. Take mother out of previous batch in gallon jug and set aside. Reserve 2 cups of the fermented tea. Decant the rest of the fermented tea into the prepared bottles. </br></br>
 
 4. Set capped kombucha bottles aside at room temp for a day or two, depending on your preference of carbonation (and accounting for summer/winter room temp). 
-    Consider storing on a baking sheet in case carbonation forces leakage. Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. Move to fridge to halt carbonation. </br></br>
+    </br>&emsp;&emsp;Consider storing on a baking sheet in case carbonation forces leakage.
+    </br>&emsp;&emsp;Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. 
+    </br>&emsp;&emsp;Move to fridge to halt carbonation. </br></br>
 
 </br><b>Bottle new tea</b></br>
 
 5. Put reserved 2 cups fermented tea back in gallon jug, no need to soap, along with cooled new tea and mother. 
-      The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
+    </br>&emsp;&emsp;The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
 
-6. Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in and set gallon jug aside at room temp for a week or so, 
-      depending on your preference of fermentation (and accounting for summer/winter room temp). 
-      The longer it ferments with the mother the less sweet and  the more vinegary it will become. This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
+6. Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in and set gallon jug aside at room temp for a week or so.
+    </br>&emsp;&emsp;This step depends on your preference of fermentation (and accounting for summer/winter room temp). 
+    </br>&emsp;&emsp;The longer it ferments with the mother the less sweet and  the more vinegary it will become.
+    </br>&emsp;&emsp;This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
 
 
 
