--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -3,21 +3,21 @@
 Yields 5-6 17oz bottles</br>
 
 <h2>Ingredients</h2></br>
-<b>Tea</b>
-1 gallon water</br>
-1 cup sugar</br>
-8 black tea bags</br>
+<b>Tea</b></br>
+&#x2022;1 gallon water</br>
+&#x2022;1 cup sugar</br>
+&#x2022;8 black tea bags</br>
 
 </br><b>Flavorings</b></br>
-Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
+&#x2022;Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
 
 </br><b>Equipment</b></br>
-1 gallon glass jug</br>
-5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
+&#x2022;1 gallon glass jug</br>
+&#x2022;5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
   less surface area exposed to air is better)</br>
-large pot for boiling tea </br>
-funnel </br>
-bottle brush for occassional deep cleaning </br>
+&#x2022;large pot for boiling tea </br>
+&#x2022;funnel </br>
+&#x2022;bottle brush for occassional deep cleaning </br>
 
 </br><h2>Directions</h2></br>
 
@@ -45,10 +45,7 @@ bottle brush for occassional deep cleaning </br>
     </br>&emsp;&emsp;The longer it ferments with the mother the less sweet and  the more vinegary it will become.
     </br>&emsp;&emsp;This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
 
+</br><b>Imbibe</b></br>
+7. To drink, optionally filter kombucha through mesh screen to catch flavorings and accumulated goop, serve cold, and enjoy!
 
-
-
-
-
-
-To drink, optionally filter kombucha through mesh screen to catch flavorings and accumulated goop, serve cold, and enjoy!
+</br></br></br></br>
