--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -4,20 +4,20 @@ Yields 5-6 17oz bottles</br>
 
 <h2>Ingredients</h2></br>
 <b>Tea</b></br>
-&#x2022;1 gallon water</br>
-&#x2022;1 cup sugar</br>
-&#x2022;8 black tea bags</br>
+&#x2022; 1 gallon water</br>
+&#x2022; 1 cup sugar</br>
+&#x2022; 8 black tea bags</br>
 
 </br><b>Flavorings</b></br>
-&#x2022;Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
+&#x2022; Dealers choice, a couple strips of ginger and a some blueberries is a favorite</br>
 
 </br><b>Equipment</b></br>
-&#x2022;1 gallon glass jug</br>
-&#x2022;5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
+&#x2022; 1 gallon glass jug</br>
+&#x2022; 5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
   less surface area exposed to air is better)</br>
-&#x2022;large pot for boiling tea </br>
-&#x2022;funnel </br>
-&#x2022;bottle brush for occassional deep cleaning </br>
+&#x2022; large pot for boiling tea </br>
+&#x2022; funnel </br>
+&#x2022; bottle brush for occassional deep cleaning </br>
 
 </br><h2>Directions</h2></br>
 
@@ -26,14 +26,14 @@ Yields 5-6 17oz bottles</br>
 
 
 </br><b>Bottle fermented tea</b></br>
-2. Put flavoring into 5-6 tall skinny 17 oz fermentation bottles. Can soap the bottles but don't worry too much about deep scrubs every time in between batches.</br></br>
+2. Put flavoring into bottles. Can soap the bottles but don't worry too much about deep scrubs every time in between batches.</br></br>
 
 3. Take mother out of previous batch in gallon jug and set aside. Reserve 2 cups of the fermented tea. Decant the rest of the fermented tea into the prepared bottles. </br></br>
 
 4. Set capped kombucha bottles aside at room temp for a day or two, depending on your preference of carbonation (and accounting for summer/winter room temp). 
-    </br>&emsp;&emsp;Consider storing on a baking sheet in case carbonation forces leakage.
-    </br>&emsp;&emsp;Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. 
-    </br>&emsp;&emsp;Move to fridge to halt carbonation. </br></br>
+    </br>&emsp;&emsp;&#8212; Consider storing on a baking sheet in case carbonation forces leakage.
+    </br>&emsp;&emsp;&#8212; Make sure not to over-carbonate, especially during warmer months, to ensure bottles don’t break and burst. 
+    </br>&emsp;&emsp;&#8212; Move to fridge to halt carbonation. </br></br>
 
 </br><b>Bottle new tea</b></br>
 
@@ -41,9 +41,9 @@ Yields 5-6 17oz bottles</br>
     </br>&emsp;&emsp;The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
 
 6. Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in and set gallon jug aside at room temp for a week or so.
-    </br>&emsp;&emsp;This step depends on your preference of fermentation (and accounting for summer/winter room temp). 
-    </br>&emsp;&emsp;The longer it ferments with the mother the less sweet and  the more vinegary it will become.
-    </br>&emsp;&emsp;This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
+    </br>&emsp;&emsp;&#8212; This step depends on your preference of fermentation (and accounting for summer/winter room temp). 
+    </br>&emsp;&emsp;&#8212; The longer it ferments with the mother the less sweet and  the more vinegary it will become.
+    </br>&emsp;&emsp;&#8212; This is now the gallon jug you’ll use back at the beginning of the recipe. </br></br>
 
 </br><b>Imbibe</b></br>
 7. To drink, optionally filter kombucha through mesh screen to catch flavorings and accumulated goop, serve cold, and enjoy!
