--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -38,7 +38,7 @@ Yields 5-6 17oz bottles</br>
 </br><b>Bottle new tea</b></br>
 
 5. Put reserved 2 cups fermented tea back in gallon jug, no need to soap, along with cooled new tea and mother. 
-    </br>&emsp;&emsp;The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
+    </br>&emsp;&emsp;&#8212; The reserved fermented tea is to ensure new tea acidity starts high enough to prevent bad bacteria. </br></br>
 
 6. Cover with a kitchen towel and a rubber band so mother can breathe but bugs can’t get in and set gallon jug aside at room temp for a week or so.
     </br>&emsp;&emsp;&#8212; This step depends on your preference of fermentation (and accounting for summer/winter room temp). 
