--- a/recipes/kombucha.html
+++ b/recipes/kombucha.html
@@ -13,8 +13,9 @@ Yields 5-6 17oz bottles</br>
 
 </br><b>Equipment</b></br>
 &#x2022; 1 gallon glass jug</br>
-&#x2022; 5-6 17oz tall skinny capped glass bottles (vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
-  less surface area exposed to air is better)</br>
+&#x2022; 5-6 17oz tall skinny capped glass bottles
+        </br>&emsp;&emsp;&#8212; Vary size/number as you like but you want to fill it up to a thin neck and a stopper to ensure carbonation; 
+        less surface area exposed to air is better</br>
 &#x2022; large pot for boiling tea </br>
 &#x2022; funnel </br>
 &#x2022; bottle brush for occassional deep cleaning </br>
